Fixed quest pics: scrollbars + link

--- a/app/assets/stylesheets/quests.css.scss
+++ b/app/assets/stylesheets/quests.css.scss
@@ -4,7 +4,7 @@
 
 .pic-gallery{
   height: 200px;
-  overflow: scroll;
+  overflow: auto;
   white-space: nowrap;
   
   img{
